# reply-tum

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
agents/: __init__.py  base.py  calendar_sync.py  deadline_sentinel.py  moodle_watcher.py  room_scout.py  secretary.py  social_scout.py  study_planner.py
backend/api/: events.py  plans.py  telegram.py
backend/bedrock/: claude.py  config.py  llama.py  nova.py  titan.py
backend/bus/: base.py  pg_notify.py  sqs.py
backend/db/: models.py  session.py
frontend/app/: page.tsx
frontend/app/concepts/: page.tsx
frontend/app/plan/: page.tsx
frontend/components/: AgentGraph.tsx  EventFeed.tsx  MissProbBadge.tsx  PlanTimeline.tsx
frontend/lib/: sse.ts
infra/: seed.py
integrations/: cognee_client.py  gcal_client.py  luma_mock.py  luma_scraper.py  moodle_mock.py  moodle_playwright.py  telegram_bot.py  tumi_mock.py  tumi_scraper.py  tumonline_ical.py
models/: miss_probability.py
