[project]
name = "schatten"
version = "0.1.0"
description = "Proactive multi-agent daemon for TUM students"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.0",
    "structlog>=24.0",
    "boto3>=1.35",
    "httpx>=0.28",
    "playwright>=1.49",
    "python-telegram-bot>=21.0",
    "cognee>=0.1",
    "pgvector>=0.3",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "black>=24.0",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
